# goit-ds-hw-01

./: Dockerfile  addressbook.pkl  pyproject.toml
